Fix: Correct image paths and logo reference

--- a/ANAK/index.html
+++ b/ANAK/index.html
@@ -24,7 +24,7 @@
       <a href="#">Contact</a>
     </nav>
     <div class="logo-container">
-      <img src="assets/logo.png" alt="ANAK Logo" />
+     <img src="images/logo.png" alt="ANAK Logo" />
     </div>
   </header>
 
@@ -103,17 +103,17 @@
 
   <div class="portfolio-grid">
     <div class="portfolio-item">
-      <img src="images/fashion brand 1.jpg" alt="Project 1">
+      <img src="images/fashionbrand.jpg" alt="Project 1">
       <h3>Fashion Brand Launch</h3>
       <p>Helped a local brand get 3x more visibility with Google Ads + Social strategy.</p>
     </div>
     <div class="portfolio-item">
-      <img src="images/b2b lead.jpg" alt="Project 2">
+      <img src="images/b2blead.jpg" alt="Project 2">
       <h3>B2B Lead Campaign</h3>
       <p>Generated 200+ leads for a SaaS client with optimized LinkedIn campaigns.</p>
     </div>
     <div class="portfolio-item">
-      <img src="images/seo 2.jpg" alt="Project 3">
+      <img src="images/seo2.jpg" alt="Project 3">
       <h3>Content + SEO Revamp</h3>
       <p>Ranked 15+ keywords on page 1 and doubled organic traffic in 3 months.</p>
     </div>
