Update About section and layout improvements

--- a/index.html
+++ b/index.html
@@ -27,45 +27,62 @@
 
 
 <!-- HERO SECTION -->
-<section class="hero premium-hero" id="home">
-  <div class="hero-container" data-aos="fade-up">
-    <h1 class="hero-heading">Fresh Roots - Flourishing Roots</h1>
-    <p class="hero-subtext">
-      At <strong>ANAK Growthco</strong>, we deliver data-backed marketing that drives real business results.
-    </p>
-    <a href="#services" class="btn-premium">Explore Our Services</a>
+<section class="hero">
+  <div>
+    <h1>Fresh Roots<br>Flourishing Reach</h1>
+    <p>We elevate brands with powerful digital marketing strategies that deliver real results.</p>
+    <a href="#contact" class="cta-btn">Let's Work Together</a>
   </div>
 </section>
+
 
 
 
   <!-- ABOUT SECTION -->
-<section class="about">
-  <h2>About Us</h2>
-  <p>
-    ANAK Growthco is a digital marketing brand driven by data and powered by creativity.
-    We help businesses grow their online presence through performance marketing, content strategies,
-    and innovative campaigns.
-  </p>
-<section class="testimonials" data-aos="zoom-in">
-  ...
+<section class="about-section" id="about">
+  <div class="about-content">
+    <h2>About Us</h2>
+    <p>
+      ANAK Growthco is a data-driven digital marketing agency focused on helping businesses flourish. 
+      Our approach blends creativity with performance marketing to bring powerful results for our clients.
+    </p>
+    <p>
+      Whether you're a startup or an established brand, we help you grow with personalized strategies, powerful campaigns, and creative storytelling that connects.
+    </p>
+    <blockquote>
+      “Fresh Roots. Flourishing Reach.” — That’s not just our tagline, it’s our growth philosophy.
+    </blockquote>
+  </div>
 </section>
+
+
 
 
 
 <!-- MISSION & VISION SECTION -->
-<section class="mission-vision">
-  <div class="mv-container">
-    <div class="mv-box">
-      <h3>Our Mission</h3>
-      <p>To empower businesses with data-driven marketing strategies that unlock growth and meaningful audience engagement.</p>
+<section class="mv-section" id="mission-vision">
+  <h2 class="section-title">Our Foundation</h2>
+  <div class="mv-cards">
+    <div class="mv-card">
+      <h3>🎯 Mission</h3>
+      <p>To empower brands with data-driven strategies and creative digital campaigns that drive measurable growth and real results.</p>
     </div>
-    <div class="mv-box">
-      <h3>Our Vision</h3>
-      <p>To be the go-to digital partner for businesses seeking impactful, creative, and measurable growth in the digital era.</p>
+    <div class="mv-card">
+      <h3>👁️ Vision</h3>
+      <p>To become a leading growth partner for 1000+ businesses, combining performance, passion, and purpose through marketing excellence.</p>
+    </div>
+    <div class="mv-card">
+      <h3>💡 Values</h3>
+      <ul>
+        <li> Creativity First</li>
+        <li> Data-Driven Decisions</li>
+        <li> Transparency & Trust</li>
+        <li> Continuous Innovation</li>
+      </ul>
     </div>
   </div>
 </section>
+
 
 
 <!-- SERVICES SECTION -->
