info block and form block

--- a/ANAK/index.html
+++ b/ANAK/index.html
@@ -188,6 +188,12 @@
       <textarea placeholder="Your Message" rows="4" required></textarea>
       <button type="submit">Send Message</button>
     </form>
+
+    <div class="contact-container">
+  <div class="contact-info"> ... </div>
+  <div class="contact-form"> ... </div>
+</div>
+
   </div>
 </section>
 
