--- a/ANAK/index.html
+++ b/ANAK/index.html
@@ -10,25 +10,35 @@
 <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
 <!-- Font Awesome for icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
-
-
 </head>
-<body>
-  <!-- HEADER -->
-  <header>
-    <div class="nav-left">ANAK GROWTHCO</div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Services</a>
-      <a href="#">Contact</a>
-    </nav>
-    <div class="logo-container">
-     <img src="images/logo.png" alt="ANAK Logo" />
-    </div>
-  </header>
 
-  <!-- HERO SECTION -->
+
+<body>
+
+
+<!-- HEADER -->
+<header class="header">
+  <div class="nav-left">ANAK GROWTHCO</div>
+
+  <div class="logo-container">
+    <img src="images/logo.png" alt="ANAK Logo" />
+  </div>
+
+  <div class="nav-toggle" id="menu-toggle">
+    <i class="fas fa-bars"></i>
+  </div>
+
+  <nav class="nav-links" id="nav-links">
+    <a href="#">Home</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+  </nav>
+</header>
+
+
+
+
+<!-- HERO SECTION -->
   <section class="hero">
     <div class="hero-content">
       <h1>Fresh Roots - Flourishing Reach</h1>
@@ -39,6 +49,8 @@
       <button class="cta">Explore Services</button>
     </div>
   </section>
+
+
 
   <!-- ABOUT SECTION -->
 <section class="about">
@@ -182,16 +194,21 @@
     </div>
 
     <!-- Contact Form -->
-    <form class="contact-form">
-      <input type="text" placeholder="Your Name" required>
-      <input type="email" placeholder="Your Email" required>
-      <textarea placeholder="Your Message" rows="4" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-
     <div class="contact-container">
-  <div class="contact-info"> ... </div>
-  <div class="contact-form"> ... </div>
+  <!-- Contact Details -->
+  <div class="contact-details">
+    <p>📍 <strong>Location:</strong> BANGALORE, KARNATAKA</p>
+    <p>📞 <strong>Phone:</strong> +91 8593814661</p>
+    <p>📧 <strong>Email:</strong> anakgrowthco@gmail.com</p>
+  </div>
+
+  <!-- Contact Form 
+  <form class="contact-form">
+    <input type="text" placeholder="Your Name" required />
+    <input type="email" placeholder="Your Email" required />
+    <textarea placeholder="Your Message" rows="4" required></textarea>
+    <button type="submit">Send Message</button>
+  </form>
 </div>
 
   </div>
@@ -199,7 +216,8 @@
 
 <section class="testimonials" data-aos="zoom-in">
   ...
-</section>
+</section>  
+ -->
 
 <!-- TESTIMONIALS SECTION -->
 <section class="testimonials">
@@ -257,6 +275,8 @@
 
 
 
+
+
 <script>
   const counters = document.querySelectorAll('.counter');
   counters.forEach(counter => {
@@ -276,6 +296,16 @@
     };
 
     updateCounter();
+  });
+</script>
+
+
+<script>
+  const toggle = document.getElementById('menu-toggle');
+  const navLinks = document.getElementById('nav-links');
+
+  toggle.addEventListener('click', () => {
+    navLinks.classList.toggle('active');
   });
 </script>
 
