--- a/index.html
+++ b/index.html
@@ -17,23 +17,21 @@
 <body>
 <header>
   <div class="nav-left">ANAK Growthco</div>
-
   <div class="hamburger" onclick="toggleMenu()">
     <i class="fas fa-bars"></i>
   </div>
-
-  <nav id="navbar">
+  <nav class="nav-links">
     <a href="#home">Home</a>
     <a href="#about">About</a>
     <a href="#services">Services</a>
     <a href="#blog">Blog</a>
     <a href="#contact">Contact</a>
   </nav>
-
   <div class="logo-container">
-    <img src="logo.png" alt="ANAK Logo" />
+    <img src="" alt="" />
   </div>
 </header>
+
 
 
 <!-- HERO SECTION -->
@@ -470,6 +468,13 @@
 <script>
   function toggleMenu() {
     const nav = document.getElementById('navbar');
+    nav.classList.toggle('active');
+  }
+</script>
+
+<script>
+  function toggleMenu() {
+    const nav = document.querySelector('.nav-links');
     nav.classList.toggle('active');
   }
 </script>
